test/parse/call.as
method();

method()(10, 620);

method(560, 20);

method(c=30, b=210, a=302);

method(30, a=350);

// method(a=2350, 30); // error
